2008-12-04  Sven Neumann  <sven@gimp.org>

	Bug 563130 – Hue selection mode does not cross the 0-360 degrees line

	* app/core/gimpimage-contiguous-region.c (pixel_difference):
	applied patch from Daniel Hornung.

2008-12-04  Martin Nordholts  <martinn@svn.gnome.org>

	Bug 563179 – Scrollbars not resized when we extend the canvas size

	* app/display/gimpdisplayshell-handlers.c
	(gimp_display_shell_size_changed_detailed_handler): Add explicit
	call to gimp_display_shell_scroll_clamp_and_update() at the end to
	make sure it is called.

2008-12-04  Martin Nordholts  <martinn@svn.gnome.org>

	* app/actions/images-actions.c (images_actions_setup): Pass
	arguments to gimp_action_group_add_actions() in the right order.

2008-12-04  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/convert.pdb: fixed an error in the documentation
	of the gimp-image-convert-rgb procedure.

	* app/pdb/convert-cmds.c
	* libgimp/gimpconvert_pdb.c: regenerated.

2008-12-04  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.[ch]: also use the translation
	context for the tooltips.

	* app/actions/*.c: added translation context to all tooltips. Also
	improved some tooltips while I was on it.

2008-12-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-tiff-save.c (save_image)
	(image_is_monochrome): allow to save images that are plain white or
	plain black using the CCITT Fax compression methods.

2008-12-03  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/file-ps.c: minor cleanup.

2008-12-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.[ch]: added an extra parameter for
	the translation context to all gimp_action_group_add methods.

	* app/actions/*.c: added a translation context to all action
	labels. Also unified and improved the labels and tooltips in a few
	places.
	
2008-12-03  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpactiongroup.c: check that the action name is
	unique before adding it to a GimpActionGroup.
