@@ -50,27 +50,27 @@
 #include "gimp-templates.h"
 #include "gimp-units.h"
 #include "gimp-utils.h"
-#include "gimpbrush.h"
 #include "gimpbrush-load.h"
-#include "gimpbrushgenerated-load.h"
+#include "gimpbrush.h"
 #include "gimpbrushclipboard.h"
+#include "gimpbrushgenerated-load.h"
 #include "gimpbrushpipe-load.h"
 #include "gimpbuffer.h"
 #include "gimpcontext.h"
 #include "gimpdatafactory.h"
 #include "gimpdocumentlist.h"
-#include "gimpgradient.h"
 #include "gimpgradient-load.h"
+#include "gimpgradient.h"
 #include "gimpimage.h"
 #include "gimpimagefile.h"
 #include "gimplist.h"
 #include "gimpmarshal.h"
-#include "gimppalette.h"
 #include "gimppalette-load.h"
-#include "gimppattern.h"
-#include "gimppattern-load.h"
-#include "gimppatternclipboard.h"
+#include "gimppalette.h"
 #include "gimpparasitelist.h"
+#include "gimppattern-load.h"
+#include "gimppattern.h"
+#include "gimppatternclipboard.h"
 #include "gimpprogress.h"
 #include "gimptemplate.h"
 #include "gimptoolinfo.h"
